# aa-accounting

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  README2.md  package-lock.json  package.json  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml  release.yml
accounting/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  managers.py  providers.py  services.py  tasks.py  urls.py  utils.py
accounting/locale/: django.pot
accounting/locale/cs_CZ/LC_MESSAGES/: django.mo
accounting/locale/en/LC_MESSAGES/: django.po
accounting/locale/es/LC_MESSAGES/: django.mo  django.po
accounting/locale/ja/LC_MESSAGES/: django.po
accounting/locale/nl_NL/LC_MESSAGES/: django.po
accounting/locale/ru/LC_MESSAGES/: django.mo  django.po
accounting/locale/sk/LC_MESSAGES/: django.mo  django.po
accounting/locale/uk/LC_MESSAGES/: django.mo  django.po
accounting/locale/zh_Hans/LC_MESSAGES/: django.mo
accounting/migrations/: 0001_initial.py  0002_alter_characterpayouttaxconfiguration_corporation_and_more.py
accounting/models/: __init__.py  accounting.py  taxes.py
accounting/static/accounting/css/: accounting.css
accounting/static/accounting/javascript/: admin-dashboard.js  dashboard.js
accounting/templates/accounting/: admin-characters.html  admin-corporations.html  admin-dashboard.html  admin-manual.html  base.html  dashboard.html
accounting/templates/accounting/bundles/: accounting-css.html  admin-dashboard-js.html  dashboard-js.html  datatables2-js.html  (+2 more)
accounting/templatetags/: corp_list.py
accounting/views/: admin.py  ajax.py  general.py
testauth/settings/: local.py
(+6 files in other folders)
