[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-accounting"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Swashman(John Nelson)", email = "jnelson2288@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [ "description", "version" ]
dependencies = [
    "allianceauth>=4.11.2,<5",
]
optional-dependencies.test = [
]

urls.Changelog = "https://github.com/astrum-mechanica/aa-accounting/-/blob/master/CHANGELOG.md"
urls.Documentation = "https://github.com/astrum-mechanica/aa-accounting/-/blob/master/README.md"
urls.Homepage = "https://github.com/astrum-mechanica/aa-accounting"
urls.Source = "https://github.com/astrum-mechanica/aa-accounting"
urls.Tracker = "https://github.com/astrum-mechanica/aa-accounting/-/issues"

[tool.hatch.version]
path = "accounting/__init__.py"

[tool.hatch.build]
include = [
    "/accounting",
]
